<resources>
    <string name="app_name"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">UNIPORTER</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name_txt">Name</string>
    <string name="address_txt">Address</string>
    <string name="email_txt">Email</string>
    <string name="mobile_number_txt">Mobile Number</string>
    <string name="password_txt">Password</string>
    <string name="re_enter_password_txt">Re-enter Password</string>
    <string name="create_account_txt">Create Account</string>
    <string name="already_a_member_login_txt">Already a member? Login</string>
    <string name="login_txt">Login</string>
    <string name="no_account_yet_create_one_txt">No account yet? Create one</string>
    <string name="loc">Location:</string>
    <string name="time">Time:</string>
    <string name="members">Members:</string>
    <string name="info">Information</string>
    <string name="des">Destination:</string>
    <string name="gcr">Group Chats</string>
    <string name="new_ride">New Ride</string>
    <string name="scheduled_rides">Scheduled Rides</string>
    <string name="login_caps">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="start_bird">start_bird</string>
    <string name="mottto">Between Campuses and Airports</string>
    <string name="luggage_question">How much luggage are you bringing?</string>
    <string name="large_luggage">Large Luggage</string>
    <string name="carry_on_suitcases">Carry-On Suitcases</string>
    <string name="special_luggage">Special Luggage</string>
    <string name="special_desc">Estimate the size of your uniquely shaped luggage. For example, a carry-on is size 2. A large suitcase is size 4.</string>
    <string name="blocks_desc">This information helps us group you with other riders within your walking range.</string>
    <string name="blocks_question">How many blocks are you willing to walk?</string>
    <string name="early_question">How many hours early are you willing to leave?</string>
    <string name="early_desc">Select the maximum number of hours before your flight-time for which you are willing to leave for the airport.</string>
    <string name="ride_updates">Ride Updates</string>
    <string name="chats">Chats</string>
    <string name="myrides">My Rides</string>
    <string name="flight_question">Enter Flight Information</string>
    <string name="airline_question">Pick Your Airline</string>
    <string name="flightno_question">Enter Your Flight No.</string>
    <string name="manual_flightno">Enter Flight TIme Manually</string>
    <string name="logout">Log Out</string>
    <string name="or">OR</string>
    <string name="address_question">Where is your preferred pickup location?</string>
    <string name="manual_address">Enter Address Manually</string>
    <string name="success">Success!</string>
    <string name="successmsg">You will be notified of your rideshare group 24 hours before your flight time.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="done">Done</string>
    <string name="addnewride">Add New Ride</string>
    <string-array name="large_luggage_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="airline_array">
        <item>Air Canada</item>
        <item>Alaska Airlines</item>
        <item>Allegiant Air</item>
        <item>American Airlines</item>
        <item>Boutique Air</item>
        <item>British Airways</item>
        <item>Condor</item>
        <item>Contour</item>
        <item>Delta Air Lines</item>
        <item>Frontier Airlines</item>
        <item>Icelandair</item>
        <item>jetBlue</item>
        <item>Southern Airways Express</item>
        <item>Southwest</item>
        <item>Spirit Airlines</item>
        <item>United Airlines</item>
        <item>WOW</item>
    </string-array>
    <string name= "airline_prompt">Choose an airline</string>
    <string name="pending_rides">Pending Rides</string>
    <string-array name="small_luggage_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="hours_early_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="special_luggage_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="early_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="blocks_array">
        <item>1 block</item>
        <item>2 blocks</item>
        <item>3 blocks</item>
        <item>4 blocks</item>
        <item>5 blocks</item>
        <item>6 blocks</item>
        <item>7 blocks</item>
        <item>8 blocks</item>
    </string-array>
    <string-array name="address_array">
        <item>Academy</item>
        <item>Allston</item>
        <item>AMR I</item>
        <item>AMR II</item>
        <item>AMR III</item>
        <item>Blackstone</item>
        <item> Bradford</item>
        <item>Charles Commons</item>
        <item>Homewood</item>
        <item>Jefferson</item>
        <item>Rogers House</item>
        <item>Social</item>
        <item>The Charles</item>
        <item>Uni One</item>
        <item>Marylander</item>
        <item>McCoy</item>
        <item>Uni West</item>
        <item>Village Lofts</item>
        <item>Wolman</item>
        <item>Wyman Towers</item>
    </string-array>
</resources>
