<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_dark"
    android:orientation="vertical"
    >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="174dp"
            android:layout_height="172dp"
            android:layout_marginTop="53dp"
            android:layout_marginBottom="415dp"
            android:contentDescription="@string/start_bird"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="253dp"
            android:layout_marginBottom="299dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="65sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/firstlogin_button"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="471dp"
            android:layout_marginBottom="102dp"
            android:background="@color/primary"
            android:padding="12dp"
            android:text="@string/login_caps"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/firstreg_button"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="573dp"
            android:background="@color/primary"
            android:padding="12dp"
            android:text="@string/register_caps"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/motto"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="353dp"
            android:layout_marginBottom="260dp"
            android:text="@string/mottto"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>