<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

        <ImageButton
            android:id="@+id/x1"
            style="@android:style/Widget.ImageButton"
            android:layout_width="47dp"
            android:layout_height="46dp"
            android:background="@color/accent"
            android:scaleType="fitXY"
            android:layout_marginStart="345dp"
            android:layout_marginLeft="380dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_close_black_24dp"
            android:layout_gravity="right"
            android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/luggage_question"
                    android:layout_width="wrap_content"
                    android:layout_height="61dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/flight_question"
                    android:typeface="normal"
                    android:layout_gravity="center"
                    android:textColor="@color/BigText"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airline_question"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            />

                <Spinner
                    android:id="@+id/airline_spinner"
                    android:layout_width="321dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@android:drawable/spinner_background"
                    android:dropDownWidth="wrap_content"
                    android:entries="@array/airline_array"
                    style="@style/spinner_style"
                    android:popupBackground="@android:drawable/spinner_dropdown_background"
                    android:prompt="@string/airline_prompt"
                    android:spinnerMode="dropdown"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carryon"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/flightno_question"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/flightnum"
            android:layout_width="308dp"
            android:layout_height="42dp"
            android:ems="10"
            android:hint="unknown"
            android:inputType="number"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/departure_date_question"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="When Is Your Departure Date:"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/set_departure_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Set Departure Date"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/primary_darker"/>

            <EditText
                android:id="@+id/deptdate"
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="date"
                android:gravity="center"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:textColor="@color/md_dark_cards"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                    android:id="@+id/departure_time_question"
                    android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="When Is Your Departure Time:"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/set_departure_time"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="3dp"
            android:background="@color/primary_darker"
            android:text="Set Departure Time" />

            <EditText
                android:id="@+id/depttime"
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="time"
                android:gravity="center"
                android:inputType="number"
                android:textColor="@color/md_dark_cards"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/front1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            android:tint="@color/primary_darker"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

                <ImageView
                    android:id="@+id/bubble1"
                    android:layout_width="137dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/first" />
        </LinearLayout>
</LinearLayout>

